--- a/kubernetes/client/client-deployment.yaml
+++ b/kubernetes/client/client-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         - name: REACT_APP_PUBLIC_FOLDER
           value: http://server-service:5000/api/images/
         - name: REACT_APP_SOCKET_URL
-          value: ws://appchatzolo.huuwxnhax.xyz
+          value: http://appchatzolo.huuwxnhax.xyz/socket.io
 
 
     
