--- a/kubernetes/server/server-secret.yaml
+++ b/kubernetes/server/server-secret.yaml
@@ -6,12 +6,12 @@ metadata:
 type: Opaque
 data:
   JWTKEY: aHV1d3huaGF4
-  AWS_ACCESS_KEY: QUtJQVUySFBCSlhYWUdRVkJIWUcK
-  AWS_SECRET_KEY: ZEs4NzMzelRLWEtRNnc1SHdZcU9QSUpETWFxREFrays4ZzFrMlNOZgo=
-  AWS_REGION: dXMtZWFzdC0xCg==
-  AWS_BUCKET_NAME: YXBwY2hhdG42aXVoCg==
-  EMAIL_HOST: c210cC5nbWFpbC5jb20K
-  EMAIL_USER: aHV1bmhhMjEwMzJrMkBnbWFpbC5jb20K
-  PASSWORD: b2J5dyB0anpjIHh3Z3cgbXV6cQo=
+  AWS_ACCESS_KEY: QUtJQVUySFBCSlhYWUdRVkJIWUc=
+  AWS_SECRET_KEY: ZEs4NzMzelRLWEtRNnc1SHdZcU9QSUpETWFxREFrays4ZzFrMlNOZg==
+  AWS_REGION: dXMtZWFzdC0x
+  AWS_BUCKET_NAME: YXBwY2hhdG42aXVo
+  EMAIL_HOST: c210cC5nbWFpbC5jb20=
+  EMAIL_USER: aHV1bmhhMjEwMzJrMkBnbWFpbC5jb20=
+  PASSWORD: b2J5dyB0anpjIHh3Z3cgbXV6cQ==
 
   
