--- a/kubernetes/socket/socket-deployment.yaml
+++ b/kubernetes/socket/socket-deployment.yaml
@@ -24,3 +24,5 @@ spec:
         env:
         - name: ORIGIN_URI
           value: http://appchatzolo.huuwxnhax.xyz
+        - name: PORT
+          value: "8800"
