--- a/socket/package.json
+++ b/socket/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4"
   }
