--- a/kubernetes/client/client-service.yaml
+++ b/kubernetes/client/client-service.yaml
@@ -7,6 +7,6 @@ spec:
   selector:
     app: client-deployment
   ports:
-  - port: 3000
+  - port: 3000  # Port exposed by the service
     protocol: TCP
   type: ClusterIP
